<resources>
    <string name="app_name">OldAgeManagmentSystem</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_back_to_login">Go Back to Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_str">Enter the email that you registered with and we\'ll send you an email if the account exists.</string>
    <string name="diseased">Diseased</string>
    <string name="healthy">Healthy</string>
    <string name="bed_written">Bed Written</string>
    <string name="literate">Literate</string>
    <string name="illeterate">Illiterate</string>
    <string name="records_section">Records Section</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unhealthy_diseased">Unhealthy/Diseased</string>
    <string name="health_condition">Health Condition</string>
    <string name="pensionwise">Pensionwise</string>
    <string name="pension">Pension</string>
    <string name="dependant">Dependant</string>
    <string name="religion">Religion</string>
    <string name="hindu">Hindu</string>
    <string name="islam">Islam</string>
    <string name="christian">Christian</string>
    <string name="sikhism">Sikhism</string>
    <string name="buddhism">Buddhism</string>
    <string name="tribal">Tribal</string>
    <string name="jaininsm">Jaininsm</string>
    <string name="irreligion">Irreligion</string>
    <string name="others">Others</string>
    <string name="error">Error</string>
</resources>